FINBUG fix vaious findbug issues